# energy-dev-case

./: .coverage  .dockerignore  .gitignore  Dockerfile  Makefile  README.md  compose.yaml  main.py  main.tf  nginx.conf  pyproject.toml  requirements-dev.txt  requirements-test.txt  requirements.txt  test.auto.tfvars  tox.ini  variables.tf
.githooks/: pre-commit  pre-push
.github/workflows/: ci.yaml
main/: constraints.py  utils.py
main/db/: auth.py  models.py  queries.py
main/routers/: admin.py  core.py  exceptions.py
src/main/: __init__.py  entrypoint.py  middleware.py  models.py  utils.py
src/main/db/: __init__.py  models.py  queries.py
src/main/routers/: admin.py  core.py  exceptions.py
src/tests/: conftest.py  test_client.py  test_database.py
src/tests/integration/: conftest.py  test_client.py
tests/integration/: conftest.py  test_client.py
tests/unit/: test_router_error_handlers.py
