[tool.black]
line-length = 120

[tool.poetry]
name = "energy-dev-case"
version = "0.1.0"
description = ""
authors = ["Guillermo Enrique Sánchez de Abreu <naselliug@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
sqlalchemy = "^2.0.10"
fastapi = "^0.89.1"
psycopg2-binary = "^2.9.5"
uvicorn = "^0.20.0"
pyyaml = "^6.0"
aiofiles = "^22.1.0"
python-multipart = "^0.0.5"


[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
pytest = "^7.2.1"
testcontainers-postgres = "^0.0.1rc1"
httpx = "^0.23.3"
coverage = "^7.1.0"
isort = "^5.11.4"
pytest-mock = "^3.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
